[package]
name = "rs-scout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocket = { version = "0.5.0-rc.3", features = ["json"] }
actix-web = "4"
sbert = "0.3.0"
serde = { version = "1.0.163", features = ["derive"] }
# serde_json = "1.0.96"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]